Update Premium pricing to /month and /year, update background remover free quota to 40 images/month, update free limits (1 MB upload, 100 KB download), add monthly upload/download limits tracking in dashboard

--- a/pricing.html
+++ b/pricing.html
@@ -383,7 +383,7 @@
             <li><strong>Desktop application</strong> (full access)</li>
             <li><strong>Mobile application</strong> (full access)</li>
             <li><strong>API access</strong> (100 calls/month)</li>
-            <li><strong>Image Background Remover:</strong> 10 images/month, max 5 MB per image</li>
+            <li><strong>Image Background Remover:</strong> 40 images/month, max 1 MB per image, 10 MB monthly upload, 2 MB monthly download (auto-compressed to 100 KB)</li>
           </ul>
           <div class="actions">
             <a href="signup.html" class="btn btn-outline">Get Started Free</a>
@@ -393,7 +393,7 @@
         <!-- Premium Plan -->
         <div class="plan featured">
           <h3>Premium</h3>
-          <div class="price">$5<span>/month</span></div>
+          <div class="price">$10<span>/month</span></div>
           <p>Complete access to all tools and features</p>
           <ul>
             <li>Unlimited document processing</li>
@@ -410,13 +410,13 @@
             <li>Priority customer support</li>
             <li>Email invoicing</li>
             <li>Advanced OCR technology</li>
-            <li><strong>Image Background Remover:</strong> Unlimited images, max 50 MB per image</li>
+            <li><strong>Image Background Remover:</strong> Unlimited images, max 50 MB per image, 1 GB monthly upload/download, actual quality</li>
           </ul>
           <div class="actions">
-            <button class="btn btn-primary" data-plan="premium" data-billing="monthly">Get Started — $5/month</button>
+            <button class="btn btn-primary" data-plan="premium" data-billing="monthly">Get Started — $10/month</button>
           </div>
           <p style="text-align:center; margin-top:12px; font-size:0.9rem; color:#56607a;">
-            or <button class="btn btn-outline" data-plan="premium" data-billing="yearly" style="display:inline-block; width:auto; padding:8px 20px; margin-top:8px;">Annual — $50/year</button> <span style="color:#28a745;">Save $10</span>
+            or <button class="btn btn-outline" data-plan="premium" data-billing="yearly" style="display:inline-block; width:auto; padding:8px 20px; margin-top:8px;">Annual — $100/year</button> <span style="color:#28a745;">Save $20</span>
           </p>
         </div>
 
