--- a/background-workspace.html
+++ b/background-workspace.html
@@ -341,11 +341,12 @@
   <img src="images/bg-removal-city-demo.svg" alt="Background Removal Demo" style="width: 100%; height: auto; display: block;">
 </div>
 <div class="status-card">
-<strong>✓ Smart Processing System</strong>
-<p>• <strong>All sizes</strong>: Google Cloud Run (Rembg U²-Net) - Professional AI</p>
-<p>• Free Upload: Up to 1 MB per image (10 MB monthly limit)</p>
-<p>• Free Download: Up to 100 KB (auto-compressed, 2 MB monthly limit)</p>
-<p>• Premium: Up to 50 MB per image (1 GB monthly upload/download limit)</p>
+<strong>✓ Professional AI Processing</strong>
+<p>• <strong>All Sizes</strong>: Google Cloud Run (Rembg U²-Net) - Professional AI</p>
+<p>• <strong>Free Upload</strong>: Up to 1 MB per image (10 MB monthly limit)</p>
+<p>• <strong>Free Download</strong>: Up to 100 KB (auto-compressed, 2 MB monthly limit)</p>
+<p>• <strong>Premium</strong>: Up to 50 MB per image (1 GB monthly upload/download limit)</p>
+<p>• <strong>Quota Tracking</strong>: Based on device/IP address to prevent abuse</p>
 </div>
 
 <!-- Quota & Pricing Information Panel -->
@@ -638,9 +639,13 @@
     // Initialize device fingerprinting
     async function initDeviceTracking() {
       try {
-        const { getDeviceId, checkDeviceQuota } = await import('./js/device-fingerprint.js');
-        deviceInfo = await getDeviceId();
-        console.log('✅ Device tracking initialized:', deviceInfo.deviceId);
+        const { getDeviceInfo } = await import('./js/device-fingerprint.js');
+        deviceInfo = await getDeviceInfo();
+        console.log('✅ Device tracking initialized:', {
+          deviceId: deviceInfo.deviceId,
+          ip: deviceInfo.ip,
+          fingerprint: deviceInfo.fingerprint.substring(0, 20) + '...'
+        });
         return true;
       } catch (error) {
         console.warn('⚠️ Device fingerprinting not available:', error);
@@ -830,7 +835,7 @@
         statusMessage.innerHTML = `<div style="padding:12px 16px;border-radius:12px;background:rgba(67,97,238,0.08);color:#1f2559;font-weight:600;">${config.message}...</div>`;
 
         // Check device quota before processing
-        const { checkDeviceQuota, incrementDeviceQuota } = await import('./js/device-fingerprint.js');
+        const { checkDeviceQuota } = await import('./js/device-fingerprint.js');
         const quotaCheck = await checkDeviceQuota('imageRemover');
         
         if (!quotaCheck.allowed) {
@@ -855,7 +860,12 @@
           });
           
           // Increment device quota after successful processing
-          await incrementDeviceQuota('imageRemover', 1, fileSize);
+          try {
+            const { incrementDeviceQuota } = await import('./js/device-fingerprint.js');
+            await incrementDeviceQuota('imageRemover', 1, fileSize);
+          } catch (error) {
+            console.warn('Failed to increment device quota:', error);
+          }
         } else {
           throw new Error(`Google Cloud processing failed: ${backendResult.error}`);
         }
