--- a/background-workspace.html
+++ b/background-workspace.html
@@ -343,8 +343,8 @@
 <div class="status-card">
 <strong>✓ Professional AI Processing</strong>
 <p>• <strong>All Sizes</strong>: Google Cloud Run (Rembg U²-Net) - Professional AI</p>
-<p>• <strong>Free Upload</strong>: Up to 1 MB per image (10 MB monthly limit)</p>
-<p>• <strong>Free Download</strong>: Up to 100 KB (auto-compressed, 2 MB monthly limit)</p>
+<p>• <strong>Free Upload</strong>: Up to 100 MB per image (100 MB monthly limit) - Temporarily increased</p>
+<p>• <strong>Free Download</strong>: Up to 100 MB (100 MB monthly limit) - Temporarily increased</p>
 <p>• <strong>Premium</strong>: Up to 50 MB per image (1 GB monthly upload/download limit)</p>
 <p>• <strong>Quota Tracking</strong>: Based on device/IP address to prevent abuse</p>
 </div>
@@ -409,11 +409,11 @@
       dimensions: 'bgRemover:dimensions'
     };
 
-    // Limits - Updated
-    const FREE_UPLOAD_LIMIT = 1 * 1024 * 1024; // 1 MB - Free upload limit per image
-    const FREE_MONTHLY_UPLOAD_LIMIT = 10 * 1024 * 1024; // 10 MB - Free monthly upload limit
-    const FREE_DOWNLOAD_LIMIT = 100 * 1024; // 100 KB - Free download limit (auto-compressed)
-    const FREE_MONTHLY_DOWNLOAD_LIMIT = 2 * 1024 * 1024; // 2 MB - Free monthly download limit
+    // Limits - TEMPORARILY INCREASED FOR ERROR HANDLING
+    const FREE_UPLOAD_LIMIT = 100 * 1024 * 1024; // 100 MB - Free upload limit per image (temporarily increased, will reduce to 1 MB later)
+    const FREE_MONTHLY_UPLOAD_LIMIT = 100 * 1024 * 1024; // 100 MB - Free monthly upload limit (temporarily increased, will reduce to 10 MB later)
+    const FREE_DOWNLOAD_LIMIT = 100 * 1024 * 1024; // 100 MB - Free download limit (temporarily increased, will reduce to 100 KB later)
+    const FREE_MONTHLY_DOWNLOAD_LIMIT = 100 * 1024 * 1024; // 100 MB - Free monthly download limit (temporarily increased, will reduce to 2 MB later)
     const FREE_PREVIEW_LIMIT = 100 * 1024; // 100 KB - Free preview without compression
     const FREE_PREVIEW_MAX = 400 * 1024; // 400 KB - Max preview size for free users
     const FREE_QUOTA_PER_MONTH = 40; // 40 images per month for free users
@@ -1055,22 +1055,22 @@
       const downloadOptions = document.getElementById('downloadOptions');
       downloadOptions.innerHTML = '';
       
-      // Option 1: Compressed (Free) - Always available, under 100 KB
+      // Option 1: Compressed (Free) - Always available, under 100 MB (TEMPORARILY INCREASED)
       const freeOption = document.createElement('div');
       freeOption.className = 'download-option';
       freeOption.innerHTML = `
         <div class="download-option-header">
-          <div class="download-option-title">Compressed Size</div>
+          <div class="download-option-title">Download (Free)</div>
           <span class="download-option-badge free">FREE</span>
         </div>
         <div class="download-option-details">
           ${compressedInfo ? 
             `<strong>${compressedInfo.sizeKB} KB</strong> (${compressedInfo.sizeMB} MB)<br>` +
             `${compressedInfo.width} × ${compressedInfo.height} pixels<br>` +
-            `<small>Auto-compressed to under 100 KB</small>` :
+            `<small>Up to 100 MB (temporarily increased)</small>` :
             `<strong>${imageInfo.sizeKB} KB</strong> (${imageInfo.sizeMB} MB)<br>` +
             `${imageInfo.width} × ${imageInfo.height} pixels<br>` +
-            `<small>Already under 100 KB limit</small>`
+            `<small>Up to 100 MB limit (temporarily increased)</small>`
           }
         </div>
       `;
