Update remaining quota references and FREE_QUOTA_PER_MONTH to 100

--- a/background-workspace.html
+++ b/background-workspace.html
@@ -416,7 +416,7 @@
     const FREE_MONTHLY_DOWNLOAD_LIMIT = 100 * 1024 * 1024; // 100 MB - Free monthly download limit (temporarily increased, will reduce to 2 MB later)
     const FREE_PREVIEW_LIMIT = 100 * 1024; // 100 KB - Free preview without compression
     const FREE_PREVIEW_MAX = 400 * 1024; // 400 KB - Max preview size for free users
-    const FREE_QUOTA_PER_MONTH = 40; // 40 images per month for free users
+    const FREE_QUOTA_PER_MONTH = 100; // 100 images per month for free users (temporarily increased, will reduce to 40 later)
     // All processing now uses Google Cloud Run (IMG.LY removed)
 
     const previewStage = document.getElementById('previewStage');
