Update image background remover limits: Free - 40 images/month, 1MB upload, 150KB compressed download, 10MB monthly limits; Premium - 50MB upload, original quality, 500MB monthly limits

--- a/pricing.html
+++ b/pricing.html
@@ -383,7 +383,7 @@
             <li><strong>Desktop application</strong> (full access)</li>
             <li><strong>Mobile application</strong> (full access)</li>
             <li><strong>API access</strong> (100 calls/month)</li>
-            <li><strong>Image Background Remover:</strong> 40 images/month, max 1 MB per image, 10 MB monthly upload, 2 MB monthly download (auto-compressed to 100 KB)</li>
+            <li><strong>Image Background Remover:</strong> 40 images/month, max 1 MB per image, 10 MB monthly upload, 10 MB monthly download (auto-compressed to 150 KB)</li>
           </ul>
           <div class="actions">
             <a href="signup.html" class="btn btn-outline">Get Started Free</a>
@@ -410,7 +410,7 @@
             <li>Priority customer support</li>
             <li>Email invoicing</li>
             <li>Advanced OCR technology</li>
-            <li><strong>Image Background Remover:</strong> Unlimited images, max 50 MB per image, 1 GB monthly upload/download, actual quality</li>
+            <li><strong>Image Background Remover:</strong> Unlimited images, max 50 MB per image, 500 MB monthly upload/download, original quality</li>
           </ul>
           <div class="actions">
             <button class="btn btn-primary" data-plan="premium" data-billing="monthly">Get Started — $10/month</button>
