--- a/background-remover.html
+++ b/background-remover.html
@@ -298,8 +298,8 @@
     async function handleFile(file) {
       if (!file) return;
       
-      // FREE UPLOAD LIMIT: 100 MB per image (TEMPORARILY INCREASED)
-      const FREE_UPLOAD_LIMIT = 100 * 1024 * 1024; // 100 MB per image (temporarily increased, will reduce to 1 MB later)
+      // FREE UPLOAD LIMIT: 1 MB per image
+      const FREE_UPLOAD_LIMIT = 1 * 1024 * 1024; // 1 MB per image
       
       if (file.size > FREE_UPLOAD_LIMIT) {
         const sizeMB = (file.size / (1024 * 1024)).toFixed(2);
