--- a/resume-maker.html
+++ b/resume-maker.html
@@ -383,17 +383,27 @@
         }
         
         /* Resume Preview Styles */
-        .resume-preview-
+        .resume-preview-header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 20px;
+            margin-bottom: 20px;
+            padding-bottom: 20px;
+            border-bottom: 2px solid var(--secondary);
+        }
 
         .resume-preview-photo {
-            width: 100px;
-            height: 100px;
+            width: 110px;
+            height: 110px;
             border-radius: 50%;
             overflow: hidden;
             border: 3px solid var(--secondary);
             cursor: pointer;
             order: 2;
-            flex: 0 0 100px;
+            flex: 0 0 110px;
+            margin-left: auto;
+            box-shadow: 0 4px 12px rgba(67, 97, 238, 0.2);
         }
 
         .resume-preview-photo img {
@@ -1880,7 +1890,15 @@
                                 width: 100%;
                             }
 
-                            .resume-preview-
+                            .resume-preview-header {
+                                display: flex;
+                                align-items: center;
+                                justify-content: space-between;
+                                gap: 20px;
+                                margin-bottom: 20px;
+                                padding-bottom: 20px;
+                                border-bottom: 2px solid #4361ee;
+                            }
 
                             .resume-preview-photo {
                                 width: 110px;
@@ -1891,7 +1909,8 @@
                                 border: 3px solid #4361ee;
                                 order: 2;
                                 flex: 0 0 110px;
-                                margin-left: 24px;
+                                margin-left: auto;
+                                box-shadow: 0 4px 12px rgba(67, 97, 238, 0.2);
                             }
 
                             .resume-preview-photo img {
@@ -1978,7 +1997,15 @@
                         box-shadow: none;
                     }
 
-                    .resume-preview-
+                    .resume-preview-header {
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                        gap: 20px;
+                        margin-bottom: 20px;
+                        padding-bottom: 20px;
+                        border-bottom: 2px solid #4361ee;
+                    }
 
                     .resume-preview-photo {
                         width: 110px;
@@ -1989,7 +2016,8 @@
                         flex-shrink: 0;
                         order: 2;
                         flex: 0 0 110px;
-                        margin-left: 24px;
+                        margin-left: auto;
+                        box-shadow: 0 4px 12px rgba(67, 97, 238, 0.2);
                     }
 
                     .resume-preview-photo img {
