Improve background removal quality: alpha matting, higher resolution, better edge preservation
- Backend: Higher resolution (512px), maintain aspect ratio
- Alpha matting for smooth edges (hair, fur, cloth details)
- Processing time tracking
- Added scipy for advanced edge processing
- Fixed JavaScript error (footerYear null check)
- Updated root file to use PyTorch endpoint

--- a/server/public/background-workspace.html
+++ b/server/public/background-workspace.html
@@ -965,7 +965,10 @@
       }
     });
 
-    document.getElementById('footerYear').textContent = new Date().getFullYear();
+    const footerYear = document.getElementById('footerYear');
+    if (footerYear) {
+      footerYear.textContent = new Date().getFullYear();
+    }
   </script>
     
 <script type="module">
