--- a/background-style.html
+++ b/background-style.html
@@ -4,7 +4,14 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
-<title>Background Style | easyjpgtopdf</title>
+<title>Background Style Editor - Change Image Background Colors & Styles | easyjpgtopdf</title>
+    <meta name="description" content="Change background style and colors of images. Edit image backgrounds with custom colors, gradients, and styles. Free background style editor tool.">
+    <meta name="keywords" content="background style, change background color, image background editor, background color changer, transparent background, background style editor, image background tool, free background editor">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Background Style Editor - Change Image Background Colors & Styles">
+    <meta property="og:description" content="Change background style and colors of images. Edit image backgrounds with custom colors and styles.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://easyjpgtopdf.com/background-style.html">
 <link href="css/footer.css" rel="stylesheet"/>
 <script type="module" src="js/device-fingerprint.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
@@ -130,8 +137,8 @@
     {
       "@context": "https://schema.org",
       "@type": "WebPage",
-      "name": "Background Style | easyjpgtopdf",
-      "description": "Online PDF and image conversion tools",
+      "name": "Background Style Editor - Change Image Background Colors & Styles",
+      "description": "Change background style and colors of images. Edit image backgrounds with custom colors, gradients, and styles. Free background style editor tool.",
       "url": "https://easyjpgtopdf.com/background-style.html",
       "inLanguage": "en-US",
       "isPartOf": {
@@ -165,6 +172,7 @@
 
 <main class="stage">
 <section class="panel">
+<h1>Background Style Editor - Change Image Background Colors & Styles</h1>
 <h2><i class="fas fa-eye"></i> Live Preview</h2>
 <div class="preview-frame">
 <canvas id="previewCanvas"></canvas>
