Restore background workspace page and fix firebase imports

--- a/background-remover.html
+++ b/background-remover.html
@@ -311,7 +311,7 @@
     
     <script type="module" src="js/auth.js"></script>
 
-    <script src="js/firebase-init.js"></script>
+    <script type="module" src="js/firebase-init.js"></script>
 
     
     <section class="how-to-guide" style="margin: 40px 0; padding: 40px; background: white; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
