--- a/server/public/background-remover.html
+++ b/server/public/background-remover.html
@@ -389,7 +389,7 @@
     
     <script type="module" src="js/auth.js"></script>
 
-    <script src="js/firebase-init.js"></script>
+    <script type="module" src="js/firebase-init.js"></script>
 
     <footer>
         <div class="container footer-inner">
