--- a/server/public/background-workspace.html
+++ b/server/public/background-workspace.html
@@ -282,6 +282,15 @@
       statusMessage.innerHTML = `<div style="padding:16px;border-radius:14px;background:rgba(220,38,38,0.12);color:#7f1d1d;font-weight:600;">${message}</div>`;
     }
 
+    function showStatus(message) {
+      statusMessage.innerHTML = `<div style="padding:12px 16px;border-radius:12px;background:rgba(34,197,94,0.12);color:#065f46;font-weight:600;">${message}</div>`;
+      setTimeout(() => {
+        if (statusMessage.textContent?.includes(message)) {
+          clearStatus();
+        }
+      }, 3000);
+    }
+
     function clearStatus() {
       statusMessage.innerHTML = '';
     }
