--- a/index.html
+++ b/index.html
@@ -5225,17 +5225,35 @@
     </footer>
     <script src="js/global-components.js"></script>
     <script>
-    // Ensure global header loads properly
+    // Ensure header loads - multiple attempts to guarantee it works
     (function() {
         function tryLoadHeader() {
             if (typeof loadGlobalHeader === 'function') {
-                loadGlobalHeader();
-                return true;
+                try {
+                    loadGlobalHeader();
+                    return true;
+                } catch (e) {
+                    console.error('Error calling loadGlobalHeader:', e);
+                }
             }
             return false;
         }
         
-        if (document.readyState === 'loading') {
+        // Try immediately if script already loaded
+        if (document.readyState === 'complete' || document.readyState === 'interactive') {
+            if (!tryLoadHeader()) {
+                // Script not loaded yet, wait for it
+                var attempts = 0;
+                var maxAttempts = 60; // 3 seconds total
+                var checkHeader = setInterval(function() {
+                    attempts++;
+                    if (tryLoadHeader() || attempts >= maxAttempts) {
+                        clearInterval(checkHeader);
+                    }
+                }, 50);
+            }
+        } else {
+            // Wait for DOM to be ready
             document.addEventListener('DOMContentLoaded', function() {
                 if (!tryLoadHeader()) {
                     var attempts = 0;
@@ -5248,23 +5266,12 @@
                     }, 50);
                 }
             });
-        } else {
-            if (!tryLoadHeader()) {
-                var attempts = 0;
-                var maxAttempts = 40;
-                var checkHeader = setInterval(function() {
-                    attempts++;
-                    if (tryLoadHeader() || attempts >= maxAttempts) {
-                        clearInterval(checkHeader);
-                    }
-                }, 50);
-            }
         }
         
         // Final backup attempt on window load
         window.addEventListener('load', function() {
             setTimeout(function() {
-                if (!document.querySelector('header .navbar') && typeof loadGlobalHeader === 'function') {
+                if (!document.querySelector('header') && typeof loadGlobalHeader === 'function') {
                     loadGlobalHeader();
                 }
             }, 100);
