--- a/index.html
+++ b/index.html
@@ -1630,18 +1630,6 @@
     <div id="global-header-placeholder"></div>
     <!-- Global header will be loaded here by global-components.js -->
 
-    <nav aria-label="Breadcrumb" style="padding: 15px 0; background: #f8f9ff; border-bottom: 1px solid #e2e6ff;">
-        <div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
-            <ol style="list-style: none; display: flex; flex-wrap: wrap; gap: 10px; margin: 0; padding: 0; align-items: center;">
-                <li><a href="index.html" style="color: #4361ee; text-decoration: none; font-weight: 500; transition: color 0.3s;" onmouseover="this.style.color='#3a0ca3'" onmouseout="this.style.color='#4361ee'">Home</a></li>
-                <li><span style="margin: 0 8px; color: #9ca3af;">|</span></li>
-                <li><a href="login.html" style="color: #56607a; font-weight: 500; text-decoration: none; transition: color 0.3s;" onmouseover="this.style.color='#4361ee'" onmouseout="this.style.color='#56607a'">Sign In</a></li>
-                <li><span style="margin: 0 8px; color: #9ca3af;">|</span></li>
-                <li><a href="signup.html" style="color: #56607a; font-weight: 500; text-decoration: none; transition: color 0.3s;" onmouseover="this.style.color='#4361ee'" onmouseout="this.style.color='#56607a'">Signup</a></li>
-            </ol>
-        </div>
-    </nav>
-
     <!-- Home Page -->
     <section id="home" class="page active">
         <div class="hero">
@@ -1894,309 +1882,6 @@
                     </div>
                     <h3>Marriage Card</h3>
                     <p>Design beautiful marriage invitation cards.</p>
-                </div>
-
-                <!-- Archive Tools -->
-                <div class="tool-card" onclick="location.href='zip-to-rar.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-archive"></i>
-                    </div>
-                    <h3>ZIP to RAR</h3>
-                    <p>Convert ZIP archives to RAR format online.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='rar-to-zip.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-archive"></i>
-                    </div>
-                    <h3>RAR to ZIP</h3>
-                    <p>Convert RAR archives to ZIP format easily.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='zip-extractor.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-archive"></i>
-                    </div>
-                    <h3>ZIP Extractor</h3>
-                    <p>Extract files from ZIP archives online.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='rar-extractor.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-archive"></i>
-                    </div>
-                    <h3>RAR Extractor</h3>
-                    <p>Extract files from RAR archives for free.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='7z-extractor.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-archive"></i>
-                    </div>
-                    <h3>7Z Extractor</h3>
-                    <p>Extract files from 7Z archives online.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='7z-to-zip.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-archive"></i>
-                    </div>
-                    <h3>7Z to ZIP</h3>
-                    <p>Convert 7Z archives to ZIP format.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='tar-to-zip.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-archive"></i>
-                    </div>
-                    <h3>TAR to ZIP</h3>
-                    <p>Convert TAR archives to ZIP format.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='iso-extractor.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-compact-disc"></i>
-                    </div>
-                    <h3>ISO Extractor</h3>
-                    <p>Extract files from ISO disk images online.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='folder-to-zip.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-folder"></i>
-                    </div>
-                    <h3>Folder to ZIP</h3>
-                    <p>Compress folders into ZIP archives online.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='batch-zip-converter.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-layer-group"></i>
-                    </div>
-                    <h3>Batch ZIP Converter</h3>
-                    <p>Convert multiple ZIP files in batch mode.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='epub-to-pdf.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-book"></i>
-                    </div>
-                    <h3>EPUB to PDF</h3>
-                    <p>Convert EPUB e-books to PDF format.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='pdf-to-epub.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-pdf"></i>
-                    </div>
-                    <h3>PDF to EPUB</h3>
-                    <p>Convert PDF documents to EPUB e-books.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='epub-to-mobi.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-book"></i>
-                    </div>
-                    <h3>EPUB to MOBI</h3>
-                    <p>Convert EPUB to MOBI for Kindle devices.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='mobi-to-epub.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-book"></i>
-                    </div>
-                    <h3>MOBI to EPUB</h3>
-                    <p>Convert MOBI files to EPUB format.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='azw3-to-epub.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-book"></i>
-                    </div>
-                    <h3>AZW3 to EPUB</h3>
-                    <p>Convert AZW3 Kindle files to EPUB.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='fb2-to-pdf.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-pdf"></i>
-                    </div>
-                    <h3>FB2 to PDF</h3>
-                    <p>Convert FictionBook FB2 to PDF format.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='pdf-to-text.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-alt"></i>
-                    </div>
-                    <h3>PDF to Text</h3>
-                    <p>Extract text content from PDF files.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='rtf-to-pdf.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-pdf"></i>
-                    </div>
-                    <h3>RTF to PDF</h3>
-                    <p>Convert Rich Text Format to PDF.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='txt-to-pdf.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-pdf"></i>
-                    </div>
-                    <h3>TXT to PDF</h3>
-                    <p>Convert text files to PDF documents.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='webp-to-png.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-image"></i>
-                    </div>
-                    <h3>WebP to PNG</h3>
-                    <p>Convert WebP images to PNG format.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='png-to-webp.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-image"></i>
-                    </div>
-                    <h3>PNG to WebP</h3>
-                    <p>Convert PNG images to WebP format.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='heic-to-jpg.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-image"></i>
-                    </div>
-                    <h3>HEIC to JPG</h3>
-                    <p>Convert HEIC images to JPG format.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='jpg-to-webp.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-image"></i>
-                    </div>
-                    <h3>JPG to WebP</h3>
-                    <p>Convert JPG images to WebP format.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='tiff-to-png.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-image"></i>
-                    </div>
-                    <h3>TIFF to PNG</h3>
-                    <p>Convert TIFF images to PNG format.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='png-to-ico.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-image"></i>
-                    </div>
-                    <h3>PNG to ICO</h3>
-                    <p>Convert PNG images to ICO icon format.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='svg-to-png.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-image"></i>
-                    </div>
-                    <h3>SVG to PNG</h3>
-                    <p>Convert SVG vector images to PNG.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='svg-to-jpg.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-image"></i>
-                    </div>
-                    <h3>SVG to JPG</h3>
-                    <p>Convert SVG vector images to JPG.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='ai-to-png.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-image"></i>
-                    </div>
-                    <h3>AI to PNG</h3>
-                    <p>Convert Adobe Illustrator files to PNG.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='ai-to-svg.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-image"></i>
-                    </div>
-                    <h3>AI to SVG</h3>
-                    <p>Convert Adobe Illustrator files to SVG.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='eps-to-png.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-image"></i>
-                    </div>
-                    <h3>EPS to PNG</h3>
-                    <p>Convert EPS files to PNG format.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='bmp-to-jpg.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-image"></i>
-                    </div>
-                    <h3>BMP to JPG</h3>
-                    <p>Convert BMP bitmap images to JPG.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='bmp-to-png.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-image"></i>
-                    </div>
-                    <h3>BMP to PNG</h3>
-                    <p>Convert BMP bitmap images to PNG.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='cr2-to-jpg.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-image"></i>
-                    </div>
-                    <h3>CR2 to JPG</h3>
-                    <p>Convert Canon CR2 raw files to JPG.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='raw-to-jpg.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-image"></i>
-                    </div>
-                    <h3>RAW to JPG</h3>
-                    <p>Convert RAW camera files to JPG.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='psd-to-png.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-image"></i>
-                    </div>
-                    <h3>PSD to PNG</h3>
-                    <p>Convert Photoshop PSD files to PNG.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='psd-to-jpg.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-image"></i>
-                    </div>
-                    <h3>PSD to JPG</h3>
-                    <p>Convert Photoshop PSD files to JPG.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='hdr-to-jpg.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-image"></i>
-                    </div>
-                    <h3>HDR to JPG</h3>
-                    <p>Convert HDR images to JPG format.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='avif-to-jpg.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-image"></i>
-                    </div>
-                    <h3>AVIF to JPG</h3>
-                    <p>Convert AVIF images to JPG format.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='avif-to-png.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-image"></i>
-                    </div>
-                    <h3>AVIF to PNG</h3>
-                    <p>Convert AVIF images to PNG format.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='transparent-background-maker.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-magic"></i>
-                    </div>
-                    <h3>Transparent Background</h3>
-                    <p>Remove background and make images transparent.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='exif-data-remove.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-shield-alt"></i>
-                    </div>
-                    <h3>EXIF Data Remove</h3>
-                    <p>Remove EXIF metadata from images.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='image-cropper.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-crop"></i>
-                    </div>
-                    <h3>Image Cropper</h3>
-                    <p>Crop and resize images online.</p>
-                </div>
-                <div class="tool-card" onclick="location.href='photo-enhancer.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-wand-magic-sparkles"></i>
-                    </div>
-                    <h3>Photo Enhancer</h3>
-                    <p>Enhance and improve photo quality.</p>
                 </div>
             </div>
 
@@ -5237,41 +4922,17 @@
     </footer>
     <script src="js/global-components.js"></script>
     <script>
-    // Ensure header and breadcrumb load properly
+    // Ensure global header loads properly
     (function() {
         function tryLoadHeader() {
             if (typeof loadGlobalHeader === 'function') {
-                try {
-                    loadGlobalHeader();
-                    // Also ensure breadcrumb loads
-                    if (typeof loadGlobalBreadcrumb === 'function') {
-                        setTimeout(function() {
-                            loadGlobalBreadcrumb();
-                        }, 100);
-                    }
-                    return true;
-                } catch (e) {
-                    console.error('Error calling loadGlobalHeader:', e);
-                }
+                loadGlobalHeader();
+                return true;
             }
             return false;
         }
         
-        // Try immediately if script already loaded
-        if (document.readyState === 'complete' || document.readyState === 'interactive') {
-            if (!tryLoadHeader()) {
-                // Script not loaded yet, wait for it
-                var attempts = 0;
-                var maxAttempts = 60; // 3 seconds total
-                var checkHeader = setInterval(function() {
-                    attempts++;
-                    if (tryLoadHeader() || attempts >= maxAttempts) {
-                        clearInterval(checkHeader);
-                    }
-                }, 50);
-            }
-        } else {
-            // Wait for DOM to be ready
+        if (document.readyState === 'loading') {
             document.addEventListener('DOMContentLoaded', function() {
                 if (!tryLoadHeader()) {
                     var attempts = 0;
@@ -5284,19 +4945,24 @@
                     }, 50);
                 }
             });
+        } else {
+            if (!tryLoadHeader()) {
+                var attempts = 0;
+                var maxAttempts = 40;
+                var checkHeader = setInterval(function() {
+                    attempts++;
+                    if (tryLoadHeader() || attempts >= maxAttempts) {
+                        clearInterval(checkHeader);
+                    }
+                }, 50);
+            }
         }
         
         // Final backup attempt on window load
         window.addEventListener('load', function() {
             setTimeout(function() {
-                if (!document.querySelector('header') && typeof loadGlobalHeader === 'function') {
+                if (!document.querySelector('header .navbar') && typeof loadGlobalHeader === 'function') {
                     loadGlobalHeader();
-                }
-                // Ensure breadcrumb loads
-                if (typeof loadGlobalBreadcrumb === 'function') {
-                    setTimeout(function() {
-                        loadGlobalBreadcrumb();
-                    }, 200);
                 }
             }, 100);
         });
