Fix ppt-to-pdf.html: move trust badges outside script tag, close script tag properly, clean up corrupted code above SSL section

--- a/ppt-to-pdf.html
+++ b/ppt-to-pdf.html
@@ -413,7 +413,9 @@ ssList.add('dragover'); });
             } catch (err) { console.error(err); showError('Failed to convert. Please try another file.'); }
             finally { loading.style.display = 'none'; progressContainer.style.display = 'none'; progressBar.style.width = '0%'; convertBtn.disabled = false; }
         }
-<div class="trust-badges" style="text-align: center; padding: 20px; background: linear-gradient(135deg, #f8f9ff, #ffffff); border-radius: 12px; margin: 30px 0; border: 2px solid #e2e6ff;">
+    </script>
+
+    <div class="trust-badges" style="text-align: center; padding: 20px; background: linear-gradient(135deg, #f8f9ff, #ffffff); border-radius: 12px; margin: 30px 0; border: 2px solid #e2e6ff;">
         <div style="display: flex; justify-content: center; align-items: center; gap: 40px; flex-wrap: wrap;">
             <div style="display: flex; align-items: center; gap: 10px;">
                 <i class="fas fa-shield-alt" style="font-size: 2rem; color: #4361ee;"></i>
