Fix corrupted script tag and add missing About section in ppt-to-pdf.html

--- a/ppt-to-pdf.html
+++ b/ppt-to-pdf.html
@@ -223,6 +223,9 @@
         const uploadArea = document.getElementById('upload-area');
         const fileInput = document.getElementById('file-input');
         const fileInfo = document.getElementById('file-info');
+    </script>
+
+    <section class="explanatory-content" style="margin: 40px 0; padding: 40px; background: linear-gradient(135deg, #f8f9ff, #ffffff); border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
         <div class="container" style="max-width: 900px; margin: 0 auto;">
             <h2 style="font-size: 2rem; color: #4361ee; margin-bottom: 20px; text-align: center;">
                 <i class="fas fa-info-circle" style="margin-right: 10px;"></i>
