Fix PDF conversion tools upload and preview issues - Remove automatic redirects in pdf-to-jpg.html - Fix file-converter.js to properly store/retrieve ArrayBuffers using base64 - Fix pdf-to-text-convert.html and pdf-to-epub-convert.html to properly load files - Update convertPdfToText to handle ArrayBuffer data correctly

--- a/pdf-to-jpg.html
+++ b/pdf-to-jpg.html
@@ -588,7 +588,10 @@ ssLabel">Preparing fileâ¦</div>
         try{ await setPdfToIDB(f, f.name); }
         catch(_){ statusMessage.textContent = 'IndexedDB blocked, using fallback storage. Conversion may be slower.'; statusMessage.className = 'status-message'; }
         await saveFallback(f);
-        setTimeout(()=>{ setProgress(null); location.href = 'pdf-to-jpg-convert.html'; }, 250);
+        setProgress(100, 'Ready! Continue to preview.');
+        setTimeout(()=>{ setProgress(null); }, 400);
+        statusMessage.textContent = 'Ready to continue. Click Continue to preview and export.';
+        statusMessage.className = 'status-message success';
       });
       input.addEventListener('change', async function(){
         const f = this.files && this.files[0]; if(!f) return;
@@ -606,7 +609,10 @@ ssLabel">Preparing fileâ¦</div>
         try{ await setPdfToIDB(f, f.name); }
         catch(_){ statusMessage.textContent = 'IndexedDB blocked, using fallback storage. Conversion may be slower.'; statusMessage.className = 'status-message'; }
         await saveFallback(f);
-        setTimeout(()=>{ setProgress(null); location.href = 'pdf-to-jpg-convert.html'; }, 250);
+        setProgress(100, 'Ready! Continue to preview.');
+        setTimeout(()=>{ setProgress(null); }, 400);
+        statusMessage.textContent = 'Ready to continue. Click Continue to preview and export.';
+        statusMessage.className = 'status-message success';
       });
       continueBtn.addEventListener('click', function(){
         if (continueBtn.disabled) return;
