--- a/pdf-to-jpg.html
+++ b/pdf-to-jpg.html
@@ -443,9 +443,7 @@
 <a class="btn secondary" href="index.html"><i class="fas fa-house"></i> Back to Home</a>
 </div>
 <div id="progressWrapper" style="display:none;margin-top:18px">
-<div class="muted" id="progre
-    
-ssLabel">Preparing fileâ¦</div>
+<div class="muted" id="progressLabel">Preparing fileâ¦</div>
 <div style="height:10px;background:#e5e7eb;border-radius:999px;overflow:hidden;margin-top:8px">
 <div id="progressBar" style="width:0%;height:100%;background:linear-gradient(135deg,var(--primary),var(--secondary));transition:width 0.2s ease"></div>
 </div>
@@ -526,12 +524,12 @@ ssLabel">Preparing fileâ¦</div>
 
       function setProgress(percent, label){
         if (percent === null) {
-          progressWrapper.style.display = 'none';
+          if (progressWrapper) if (progressWrapper) progressWrapper.style.display = 'none';
           return;
         }
-        progressWrapper.style.display = 'block';
-        progressBar.style.width = `${Math.min(100, Math.max(0, percent))}%`;
-        if (label) progressLabel.textContent = label;
+        if (progressWrapper) if (progressWrapper) progressWrapper.style.display = 'block';
+        if (progressBar) if (progressBar) progressBar.style.width = `${Math.min(100, Math.max(0, percent))}%`;
+        if (label && progressLabel) if (progressLabel) progressLabel.textContent = label;
       }
 
       function resetUI(){
